[package]
name = "rusty-rescuetime"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
serde = { version = "1.0.116", features = ["derive"] }
strum = { version = "0.19.5", features = ["derive"] }