[package]
name = "rusty-rescuetime"
version = "0.1.0"
authors = ["MarkAnthonyM <MarkAnthonyMartinez9@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "An interface over the RescueTime API"
repository = "https://github.com/MarkAnthonyM/Rusty-RescueTime"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
reqwest = { version = "0.10.8", features = ["json", "blocking"] }
serde = { version = "1.0.116", features = ["derive"] }
strum = { version = "0.19.5", features = ["derive"] }